[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Runes/RuneActive.gd" type="Script" id=1]
[ext_resource path="res://Game/NPCs/PowerRune.png" type="Texture" id=2]
[ext_resource path="res://Game/Runes/Runes-03.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Power"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteRune:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 2.5, 2.5 ), Vector2( 2.5, 2.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteRune:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.947042 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PowerRune:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="RuneActive" type="Node2D"]
script = ExtResource( 1 )

[node name="PowerRune" type="Sprite" parent="."]
position = Vector2( 0, -65 )
z_index = 1
texture = ExtResource( 2 )

[node name="SpriteRune" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.947042 )
position = Vector2( 0, -65 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 3 )
vframes = 2
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Power = SubResource( 1 )

[node name="RuneTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RuneTimer" to="." method="_on_RuneTimer_timeout"]
